--- a/Pages/Aiden.html
+++ b/Pages/Aiden.html
@@ -11,9 +11,62 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="../style/style.css" />
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-  
+    <!-- Navbar here -->
+
+    <!-- Carousel Start -->
+    <div id="carouselExample" class="carousel slide">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img
+            src="../assets/Whack_Your_Computer.webp"
+            class="d-block w-50 centerMe"
+            alt="..."
+          />
+          <h2 class="centerMe"><b><i>10. Whack Your __</i></b></h2>
+          <p class="centerMe">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste
+            dolores accusantium ea sit distinctio temporibus cum non neque
+            voluptate quaerat eaque quidem unde aut voluptas, vero
+            reprehenderit! Laudantium, reprehenderit ab?
+          </p>
+        </div>
+        <div class="carousel-item">
+          <img src="..." class="d-block w-100" alt="..." />
+        </div>
+        <div class="carousel-item">
+          <img src="..." class="d-block w-100" alt="..." />
+        </div>
+      </div>
+      <button
+        class="carousel-control-prev"
+        type="button"
+        data-bs-target="#carouselExample"
+        data-bs-slide="prev"
+      >
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button
+        class="carousel-control-next"
+        type="button"
+        data-bs-target="#carouselExample"
+        data-bs-slide="next"
+      >
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+    <!-- Carousel End -->
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
