--- a/index.html
+++ b/index.html
@@ -10,17 +10,34 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./style/style.css" />
   </head>
   <body>
-    <h2 class="centerMe"><u>Directory</u></h2>
 
-    <div class="container">
-      <div class="row">Page 1: Directory</div>
-      <div class="row">Page 2: Zach's top 10</div>
-      <div class="row">Page 3: Aiden's top 10</div>
-    </div>
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
