carousel set up

--- a/Pages/Aiden.html
+++ b/Pages/Aiden.html
@@ -24,19 +24,19 @@
 
     <!-- Carousel Start -->
     <div id="carouselExample" class="carousel slide">
-      <div class="carousel-inner">
+      <div class="carousel-inner centerMe">
         <div class="carousel-item active">
           <img
             src="../assets/Whack_Your_Computer.webp"
-            class="d-block w-50 centerMe"
+            class=" w-50"
             alt="..."
           />
           <h2 class="centerMe"><b><i>10. Whack Your __</i></b></h2>
-          <p class="centerMe">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste
+          <p style="margin-left: 20%; margin-right: 20%;">
+            <b>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste
             dolores accusantium ea sit distinctio temporibus cum non neque
             voluptate quaerat eaque quidem unde aut voluptas, vero
-            reprehenderit! Laudantium, reprehenderit ab?
+            reprehenderit! Laudantium, reprehenderit ab?</b>
           </p>
         </div>
         <div class="carousel-item">
@@ -50,7 +50,7 @@
         class="carousel-control-prev"
         type="button"
         data-bs-target="#carouselExample"
-        data-bs-slide="prev"
+        data-bs-slide="prev" 
       >
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Previous</span>
