Zach's Stuff Added

--- a/index.html
+++ b/index.html
@@ -4,40 +4,34 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Home Page</title>
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-      crossorigin="anonymous"
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" 
+          rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" 
+          crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="styles.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter&display=swap"
-      rel="stylesheet"
+
+    <link rel="stylesheet" 
+          href="./style/style.css" 
     />
-    <link rel="stylesheet" href="./style/style.css" />
+    
   </head>
   <body>
+      <div class="header">
+          <div class="container-fluid headerButton" style= "grid-column-start: 2;"><h1><strong><b><i>HOME</i></b></strong></h1></div>
+          <div class="container-fluid headerButton" style= "grid-column-start: 4;"><h1><strong><b><i>AIDEN</i></b></strong></h1></div>
+          <div class="container-fluid headerButton" style= "grid-column-start: 6;"><h1><strong><b><i>ZACH</i></b></strong></h1></div>
+      </div>
+
+      <div class="container-fluid">
+          <h1 style="font-size: 6em; text-align: center;"><strong><i><b>AIDEN & ZACH'S TOP 10 FLASH GAMES</b></i></strong></h1>
+      </div>
+      <div style="margin-left: auto; margin-right: auto; background-color: black; width: 90%; height: 1px;"></div>
+      <div>
+        <img src="./Assets/RipFlash.jpg" alt="Flash's Gravestone" style="margin-top: 25px; margin-left: 37.5%; margin-right: auto; width: 25%;">
+      </div>
 
 
+  
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
