playlistButton set up

--- a/Pages/Aiden.html
+++ b/Pages/Aiden.html
@@ -21,6 +21,13 @@
   </head>
   <body>
     <!-- Navbar here -->
+    <div class="header">
+      <div class="container-fluid headerButton" style= "grid-column-start: 2;"><h1><strong><b><i>HOME</i></b></strong></h1></div>
+      <div class="container-fluid headerButton" style= "grid-column-start: 4;"><h1><strong><b><i>AIDEN</i></b></strong></h1></div>
+      <div class="container-fluid headerButton" style= "grid-column-start: 6;"><h1><strong><b><i>ZACH</i></b></strong></h1></div>
+      <div class="container-fluid playlistButton" style= "grid-column-start: 8;"><h1><strong><b><i>AIDEN'S REVIEW PLAYLIST</i></b></strong></h1></div> </div>
+  </div>
+  </div>
 
     <!-- Carousel Start -->
     <div id="carouselExample" class="carousel slide">
@@ -31,7 +38,7 @@
             class=" w-50"
             alt="..."
           />
-          <h2 class="centerMe"><b><i>10. Whack Your __</i></b></h2>
+          <h1 class="centerMe"><b><strong><i>10. Whack Your __</i></b></strong></h1>
           <p style="margin-left: 20%; margin-right: 20%;">
             <b>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste
             dolores accusantium ea sit distinctio temporibus cum non neque
