--- a/Pages/Aiden.html
+++ b/Pages/Aiden.html
@@ -11,21 +11,17 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="../style/style.css" />
-    <link rel="stylesheet" href="styles.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@900&family=Playfair+Display&display=swap" rel="stylesheet">
   </head>
   <body>
     <!-- Navbar here -->
     <div class="header">
-      <div class="container-fluid headerButton" style= "grid-column-start: 2;"><h1><strong><b><i>HOME</i></b></strong></h1></div>
+      <div class="container-fluid headerButton" style= "grid-column-start: 2;"><h1><strong><b><i><a href="../index.html">HOME</a></i></b></strong></h1></div>
       <div class="container-fluid headerButton" style= "grid-column-start: 4;"><h1><strong><b><i>AIDEN</i></b></strong></h1></div>
       <div class="container-fluid headerButton" style= "grid-column-start: 6;"><h1><strong><b><i>ZACH</i></b></strong></h1></div>
-      <div class="container-fluid playlistButton" style= "grid-column-start: 8;"><h1><strong><b><i>AIDEN'S REVIEW PLAYLIST</i></b></strong></h1></div> </div>
+      <div class="container-fluid playlistButton" style= "grid-column-start: 8; font-size: 1.75em;"><h1><strong><b><i>AIDEN'S REVIEW PLAYLIST</i></b></strong></h1></div> </div>
   </div>
   </div>
 
@@ -35,8 +31,9 @@
         <div class="carousel-item active">
           <img
             src="../assets/Whack_Your_Computer.webp"
-            class=" w-50"
             alt="..."
+            width="630"
+            height="440"
           />
           <h1 class="centerMe"><b><strong><i>10. Whack Your __</i></b></strong></h1>
           <p style="margin-left: 20%; margin-right: 20%;">
