--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
           rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" 
           crossorigin="anonymous"
     />
-
+    <link rel="stylesheet" href="../style/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@900&family=Playfair+Display&display=swap" rel="stylesheet">
     <link rel="stylesheet" 
           href="./style/style.css" 
     />
@@ -17,7 +20,7 @@
   <body>
       <div class="header">
           <div class="container-fluid headerButton" style= "grid-column-start: 2;"><h1><strong><b><i>HOME</i></b></strong></h1></div>
-          <div class="container-fluid headerButton" style= "grid-column-start: 4;"><h1><strong><b><i>AIDEN</i></b></strong></h1></div>
+          <div class="container-fluid headerButton" style= "grid-column-start: 4;"><h1><strong><b><i><a href="./Pages/Aiden.html">AIDEN</a></i></b></strong></h1></div>
           <div class="container-fluid headerButton" style= "grid-column-start: 6;"><h1><strong><b><i>ZACH</i></b></strong></h1></div>
       </div>
 
