--- a/Pages/Zach.html
+++ b/Pages/Zach.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Zach's top 10</title>
+    <title>Zach's Top 10</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -20,7 +20,59 @@
     />
   </head>
   <body>
-   
+    <!-- Navbar here -->
+    <div class="header">
+      <div class="container-fluid headerButton" style= "grid-column-start: 2;"><a href="../index.html"><h1><strong><b><i>HOME</i></b></strong></h1></a></div>
+          <div class="container-fluid headerButton" style= "grid-column-start: 4;"><a href="../Pages/Aiden.html"><h1><strong><b><i>AIDEN</i></b></strong></h1></a></div>
+          <div class="container-fluid headerButton" style= "grid-column-start: 6;"><a href="../Pages/Zach.html"><h1><strong><b><i>ZACH</i></b></strong></h1></a></div>
+      <div class="container-fluid headerButton playlistButton" style= "grid-column-start: 8;"><h1 style="font-size: 1.8em;"><strong><b><i>ZACH'S PLAYLIST BUTTON</i></b></strong></h1></div>
+  </div>
+    <!-- Carousel Start -->
+    <div id="carouselExample" class="carousel slide">
+      <div class="carousel-inner centerMe">
+        <div class="carousel-item active">
+          <img
+            src="../assets/Whack_Your_Computer.webp"
+            class=""
+            alt="..."
+            style="width: 630px; height: 440px;"
+          />
+          <h2 class="centerMe"><b><i>10. Whack Your __</i></b></h2>
+          <p style="margin-left: 20%; margin-right: 20%;">
+            <b>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste
+            dolores accusantium ea sit distinctio temporibus cum non neque
+            voluptate quaerat eaque quidem unde aut voluptas, vero
+            reprehenderit! Laudantium, reprehenderit ab?</b>
+          </p>
+        </div>
+        <div class="carousel-item">
+          <img src="..." class="d-block w-100" alt="..." />
+        </div>
+        <div class="carousel-item">
+          <img src="..." class="d-block w-100" alt="..." />
+        </div>
+      </div>
+      <button
+        class="carousel-control-prev"
+        type="button"
+        data-bs-target="#carouselExample"
+        data-bs-slide="prev" 
+      >
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button
+        class="carousel-control-next"
+        type="button"
+        data-bs-target="#carouselExample"
+        data-bs-slide="next"
+      >
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+    <!-- Carousel End -->
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
