--- a/index.html
+++ b/index.html
@@ -12,13 +12,15 @@
     <link rel="stylesheet" 
           href="./style/style.css" 
     />
+
+    <link href="Pages/">
     
   </head>
   <body>
       <div class="header">
-          <div class="container-fluid headerButton" style= "grid-column-start: 2;"><h1><strong><b><i>HOME</i></b></strong></h1></div>
-          <div class="container-fluid headerButton" style= "grid-column-start: 4;"><h1><strong><b><i>AIDEN</i></b></strong></h1></div>
-          <div class="container-fluid headerButton" style= "grid-column-start: 6;"><h1><strong><b><i>ZACH</i></b></strong></h1></div>
+          <div class="container-fluid headerButton" style= "grid-column-start: 2;"><a href="../index.html" style="text-decoration: none; color: black;"><h1><strong><b><i>HOME</i></b></strong></h1></a></div>
+          <div class="container-fluid headerButton" style= "grid-column-start: 4;"><a href="../Pages/Aiden.html" style="text-decoration: none; color: black;"><h1><strong><b><i>AIDEN</i></b></strong></h1></a></div>
+          <div class="container-fluid headerButton" style= "grid-column-start: 6;"><a href="../Pages/Zach.html" style="text-decoration: none; color: black;"><h1><strong><b><i>ZACH</i></b></strong></h1></a></div>
       </div>
 
       <div class="container-fluid">
@@ -28,9 +30,6 @@
       <div>
         <img src="./Assets/RipFlash.jpg" alt="Flash's Gravestone" style="margin-top: 25px; margin-left: 37.5%; margin-right: auto; width: 25%;">
       </div>
-
-
-  
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
