--- a/Pages/Zach.html
+++ b/Pages/Zach.html
@@ -14,10 +14,7 @@
     <link rel="stylesheet" href="styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@900&family=Playfair+Display&display=swap" rel="stylesheet">
   </head>
   <body>
     <!-- Navbar here -->
@@ -25,26 +22,35 @@
       <div class="container-fluid headerButton" style= "grid-column-start: 2;"><a href="../index.html"><h1><strong><b><i>HOME</i></b></strong></h1></a></div>
           <div class="container-fluid headerButton" style= "grid-column-start: 4;"><a href="../Pages/Aiden.html"><h1><strong><b><i>AIDEN</i></b></strong></h1></a></div>
           <div class="container-fluid headerButton" style= "grid-column-start: 6;"><a href="../Pages/Zach.html"><h1><strong><b><i>ZACH</i></b></strong></h1></a></div>
-      <div class="container-fluid headerButton playlistButton" style= "grid-column-start: 8;"><h1 style="font-size: 1.8em;"><strong><b><i>ZACH'S PLAYLIST BUTTON</i></b></strong></h1></div>
+      <div class="container-fluid headerButton playlistButton" style= "grid-column-start: 8;"><h1 style="font-size: 1.65em;"><strong><b><i>ZACH'S PLAYLIST BUTTON</i></b></strong></h1></div>
   </div>
     <!-- Carousel Start -->
-    <div id="carouselExample" class="carousel slide">
+    <div id="carouselExample" class="carousel slide" style="margin-top: 25px;">
       <div class="carousel-inner centerMe">
         <div class="carousel-item active">
           <img
-            src="../assets/Whack_Your_Computer.webp"
+            src="../assets/TFDW.png"
             class=""
-            alt="..."
-            style="width: 630px; height: 440px;"
+            alt="The Final Death Wish "
+            style="width: 630px; height: 420px;"
           />
-          <h2 class="centerMe"><b><i>10. Whack Your __</i></b></h2>
-          <p style="margin-left: 20%; margin-right: 20%;">
-            <b>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste
-            dolores accusantium ea sit distinctio temporibus cum non neque
-            voluptate quaerat eaque quidem unde aut voluptas, vero
-            reprehenderit! Laudantium, reprehenderit ab?</b>
-          </p>
+            <h2 class="centerMe" style="margin-top: 15px;"><b><i>10.TFDW<h5 style="margin-top: -5px;">The Final Death Wish</i></b></h5></h2>
+              <p style="margin-left: 30%; margin-right: 30%; margin-top: -5px;">
+              <b>The Final Death Wish is a level based Shoot-Em-Up that has a lot going for it, but gets beaten out in gameplay.</b>
+              </p>
         </div>
+        <div class="carousel-item">
+          <img
+            src="../assets/AgeofWar.png"
+            class=""
+            alt="The Final Death Wish "
+            style="width: 630px; height: 420px;"
+          />
+            <h2 class="centerMe" style="margin-top: 15px;"><b><i>9.Age of War 2</i></b></h2>
+              <p style="margin-left: 30%; margin-right: 30%; margin-top: -5px;">
+              <b>One of the best attrition warfare games that Ive played, but the gameplay is static, hence the low placement.</b>
+              </p>
+        </div>  
         <div class="carousel-item">
           <img src="..." class="d-block w-100" alt="..." />
         </div>
@@ -67,6 +73,7 @@
         data-bs-target="#carouselExample"
         data-bs-slide="next"
       >
+      
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Next</span>
       </button>
