--- a/Pages/Aiden.html
+++ b/Pages/Aiden.html
@@ -12,18 +12,17 @@
     />
     <link rel="stylesheet" href="../style/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@900&family=Playfair+Display&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@900&family=Playfair+Display&display=swap" rel="stylesheet">
   </head>
   <body>
     <!-- Navbar here -->
     <div class="header">
       <div class="container-fluid headerButton" style= "grid-column-start: 2;"><h1><strong><b><i><a href="../index.html">HOME</a></i></b></strong></h1></div>
       <div class="container-fluid headerButton" style= "grid-column-start: 4;"><h1><strong><b><i>AIDEN</i></b></strong></h1></div>
-      <div class="container-fluid headerButton" style= "grid-column-start: 6;"><h1><strong><b><i>ZACH</i></b></strong></h1></div>
-      <div class="container-fluid playlistButton" style= "grid-column-start: 8; font-size: 1.75em;"><h1><strong><b><i>AIDEN'S REVIEW PLAYLIST</i></b></strong></h1></div> </div>
-  </div>
-  </div>
+      <div class="container-fluid headerButton" style= "grid-column-start: 6;"><h1><strong><b><i><a href="./Zach.html">ZACH</a></i></b></strong></h1></div>
+      <div class="container-fluid playlistButton" style= "grid-column-start: 8;"><h1 style="font-size: 1.85em;"><strong><b><i><a href="https://youtube.com/playlist?list=PLcJzOnUVyy1c0QOpG5yQbDmo-fqiW0V8q&si=yaX9QqalYLWchr93" target="_blank">AIDEN'S REVIEW PLAYLIST</a></i></b></strong></h1></div>
+    </div>
 
     <!-- Carousel Start -->
     <div id="carouselExample" class="carousel slide">
@@ -34,6 +33,7 @@
             alt="..."
             width="630"
             height="440"
+            class="centerMe"
           />
           <h1 class="centerMe"><b><strong><i>10. Whack Your __</i></b></strong></h1>
           <p style="margin-left: 20%; margin-right: 20%;">
@@ -44,10 +44,41 @@
           </p>
         </div>
         <div class="carousel-item">
-          <img src="..." class="d-block w-100" alt="..." />
+          <img src="../assets/Line_Rider_Beta_2.png" alt="..." 
+          width="630"
+          height="440"/>
+          <h1 class="centerMe"><b><strong><i>9. Line Rider</i></b></strong></h1>
+          <p style="margin-left: 20%; margin-right: 20%;">
+            <b>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste
+            dolores accusantium ea sit distinctio temporibus cum non neque
+            voluptate quaerat eaque quidem unde aut voluptas, vero
+            reprehenderit! Laudantium, reprehenderit ab?</b>
+          </p>
         </div>
         <div class="carousel-item">
-          <img src="..." class="d-block w-100" alt="..." />
+          <br>
+          <img src="../assets/VVVVVV.png"  alt="..." 
+          height="440"
+          width="450"/>
+          <h1 class="centerMe"><b><strong><i>8. VVVVVV</i></b></strong></h1>
+          <p style="margin-left: 20%; margin-right: 20%;">
+            <b>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste
+            dolores accusantium ea sit distinctio temporibus cum non neque
+            voluptate quaerat eaque quidem unde aut voluptas, vero
+            reprehenderit! Laudantium, reprehenderit ab?</b>
+        </div>
+        <div class="carousel-item">
+          <br>
+          <br>
+          <img src="../assets/Bloxorz.webp"  alt="..." 
+          height="440"
+          width="630"/>
+          <h1 class="centerMe"><b><strong><i>7. Blozorz</i></b></strong></h1>
+          <p style="margin-left: 20%; margin-right: 20%;">
+            <b>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste
+            dolores accusantium ea sit distinctio temporibus cum non neque
+            voluptate quaerat eaque quidem unde aut voluptas, vero
+            reprehenderit! Laudantium, reprehenderit ab?</b>
         </div>
       </div>
       <button
