--- a/Pages/Zach.html
+++ b/Pages/Zach.html
@@ -31,7 +31,7 @@
           <img
             src="../assets/TFDW.png"
             class=""
-            alt="The Final Death Wish "
+            alt="The Final Death Wish"
             style="width: 630px; height: 420px;"
           />
             <h2 class="centerMe" style="margin-top: 15px;"><b><i>10.TFDW<h5 style="margin-top: -5px;">The Final Death Wish</i></b></h5></h2>
@@ -43,7 +43,103 @@
           <img
             src="../assets/AgeofWar.png"
             class=""
-            alt="The Final Death Wish "
+            alt="Age of War"
+            style="width: 630px; height: 420px;"
+          />
+            <h2 class="centerMe" style="margin-top: 15px;"><b><i>9.Age of War 2</i></b></h2>
+              <p style="margin-left: 30%; margin-right: 30%; margin-top: -5px;">
+              <b>One of the best attrition warfare games that Ive played, but the gameplay is static, hence the low placement.</b>
+              </p>
+        </div>  
+        <div class="carousel-item">
+          <img
+            src="../assets/AgeofWar.png"
+            class=""
+            alt="Fancy Pants Adventure"
+            style="width: 630px; height: 420px;"
+          />
+            <h2 class="centerMe" style="margin-top: 15px;"><b><i>9.Age of War 2</i></b></h2>
+              <p style="margin-left: 30%; margin-right: 30%; margin-top: -5px;">
+              <b>One of the best attrition warfare games that Ive played, but the gameplay is static, hence the low placement.</b>
+              </p>
+        </div>  
+        <div class="carousel-item">
+          <img
+            src="../assets/AgeofWar.png"
+            class=""
+            alt="Learn to Fly 2"
+            style="width: 630px; height: 420px;"
+          />
+            <h2 class="centerMe" style="margin-top: 15px;"><b><i>9.Age of War 2</i></b></h2>
+              <p style="margin-left: 30%; margin-right: 30%; margin-top: -5px;">
+              <b>One of the best attrition warfare games that Ive played, but the gameplay is static, hence the low placement.</b>
+              </p>
+        </div>  
+        <div class="carousel-item">
+          <img
+            src="../assets/AgeofWar.png"
+            class=""
+            alt="Raze 2"
+            style="width: 630px; height: 420px;"
+          />
+            <h2 class="centerMe" style="margin-top: 15px;"><b><i>9.Age of War 2</i></b></h2>
+              <p style="margin-left: 30%; margin-right: 30%; margin-top: -5px;">
+              <b>One of the best attrition warfare games that Ive played, but the gameplay is static, hence the low placement.</b>
+              </p>
+        </div>  
+        <div class="carousel-item">
+          <img
+            src="../assets/AgeofWar.png"
+            class=""
+            alt="Swords and Souls"
+            style="width: 630px; height: 420px;"
+          />
+            <h2 class="centerMe" style="margin-top: 15px;"><b><i>9.Age of War 2</i></b></h2>
+              <p style="margin-left: 30%; margin-right: 30%; margin-top: -5px;">
+              <b>One of the best attrition warfare games that Ive played, but the gameplay is static, hence the low placement.</b>
+              </p>
+        </div>  
+        <div class="carousel-item">
+          <img
+            src="../assets/AgeofWar.png"
+            class=""
+            alt="Tower of the Archmage"
+            style="width: 630px; height: 420px;"
+          />
+            <h2 class="centerMe" style="margin-top: 15px;"><b><i>9.Age of War 2</i></b></h2>
+              <p style="margin-left: 30%; margin-right: 30%; margin-top: -5px;">
+              <b>One of the best attrition warfare games that Ive played, but the gameplay is static, hence the low placement.</b>
+              </p>
+        </div>  
+        <div class="carousel-item">
+          <img
+            src="../assets/AgeofWar.png"
+            class=""
+            alt="Happy Wheels"
+            style="width: 630px; height: 420px;"
+          />
+            <h2 class="centerMe" style="margin-top: 15px;"><b><i>9.Age of War 2</i></b></h2>
+              <p style="margin-left: 30%; margin-right: 30%; margin-top: -5px;">
+              <b>One of the best attrition warfare games that Ive played, but the gameplay is static, hence the low placement.</b>
+              </p>
+        </div>  
+        <div class="carousel-item">
+          <img
+            src="../assets/AgeofWar.png"
+            class=""
+            alt="Sonny"
+            style="width: 630px; height: 420px;"
+          />
+            <h2 class="centerMe" style="margin-top: 15px;"><b><i>9.Age of War 2</i></b></h2>
+              <p style="margin-left: 30%; margin-right: 30%; margin-top: -5px;">
+              <b>One of the best attrition warfare games that Ive played, but the gameplay is static, hence the low placement.</b>
+              </p>
+        </div>  
+        <div class="carousel-item">
+          <img
+            src="../assets/AgeofWar.png"
+            class=""
+            alt="Plazma Burst"
             style="width: 630px; height: 420px;"
           />
             <h2 class="centerMe" style="margin-top: 15px;"><b><i>9.Age of War 2</i></b></h2>
