--- a/Pages/Zach.html
+++ b/Pages/Zach.html
@@ -34,7 +34,7 @@
             alt="The Final Death Wish"
             style="width: 630px; height: 420px;"
           />
-            <h2 class="centerMe" style="margin-top: 15px;"><b><i>10.TFDW<h5 style="margin-top: -5px;">The Final Death Wish</i></b></h5></h2>
+            <h2 class="centerMe"><b><i>10.TFDW<h5 style="margin-top: -10px;">The Final Death Wish</i></b></h5></h2>
               <p style="margin-left: 30%; margin-right: 30%; margin-top: -5px;">
               <b>The Final Death Wish is a level based Shoot-Em-Up that has a lot going for it, but gets beaten out in gameplay.</b>
               </p>
@@ -53,106 +53,100 @@
         </div>  
         <div class="carousel-item">
           <img
-            src="../assets/AgeofWar.png"
+            src="../assets/fancypantsadventure.png"
             class=""
             alt="Fancy Pants Adventure"
             style="width: 630px; height: 420px;"
           />
-            <h2 class="centerMe" style="margin-top: 15px;"><b><i>9.Age of War 2</i></b></h2>
+            <h2 class="centerMe"><b><i>8.FPA<h5 style="margin-top: -10px;">Fancy Pants Adventures</i></b></h5></h2>
               <p style="margin-left: 30%; margin-right: 30%; margin-top: -5px;">
-              <b>One of the best attrition warfare games that Ive played, but the gameplay is static, hence the low placement.</b>
+              <b>The best flash game platformer of all time, Super simplistic, however. A Mario-Like with great style.</b>
               </p>
         </div>  
         <div class="carousel-item">
           <img
-            src="../assets/AgeofWar.png"
+            src="../assets/Learn2Fly.jpg"
             class=""
             alt="Learn to Fly 2"
             style="width: 630px; height: 420px;"
           />
-            <h2 class="centerMe" style="margin-top: 15px;"><b><i>9.Age of War 2</i></b></h2>
+            <h2 class="centerMe" style="margin-top: 15px;"><b><i>7.Learn2Fly</i></b></h2>
               <p style="margin-left: 30%; margin-right: 30%; margin-top: -5px;">
-              <b>One of the best attrition warfare games that Ive played, but the gameplay is static, hence the low placement.</b>
+              <b>Give a penguin a hang-glider and a billion dollars for R&D and you get this game. However, very repetitive.</b>
               </p>
         </div>  
         <div class="carousel-item">
           <img
-            src="../assets/AgeofWar.png"
+            src="../assets/Raze2.png"
             class=""
             alt="Raze 2"
             style="width: 630px; height: 420px;"
           />
-            <h2 class="centerMe" style="margin-top: 15px;"><b><i>9.Age of War 2</i></b></h2>
+            <h2 class="centerMe" style="margin-top: 15px;"><b><i>6.Raze 2</i></b></h2>
               <p style="margin-left: 30%; margin-right: 30%; margin-top: -5px;">
-              <b>One of the best attrition warfare games that Ive played, but the gameplay is static, hence the low placement.</b>
+              <b>Take Quake, make it Halo, and then also a 2D Action Platformer. Sadly, levels are too similar.</b>
               </p>
         </div>  
         <div class="carousel-item">
           <img
-            src="../assets/AgeofWar.png"
+            src="../assets/Swords and Souls.png"
             class=""
             alt="Swords and Souls"
             style="width: 630px; height: 420px;"
           />
-            <h2 class="centerMe" style="margin-top: 15px;"><b><i>9.Age of War 2</i></b></h2>
+            <h2 class="centerMe" style="margin-top: 15px;"><b><i>5.Swords and Souls</i></b></h2>
               <p style="margin-left: 30%; margin-right: 30%; margin-top: -5px;">
-              <b>One of the best attrition warfare games that Ive played, but the gameplay is static, hence the low placement.</b>
+              <b>Amazing style, great turn-based combat, but the game is mostly minigames.</b>
               </p>
         </div>  
         <div class="carousel-item">
           <img
-            src="../assets/AgeofWar.png"
+            src="../assets/ToweroftheArchmage.png"
             class=""
             alt="Tower of the Archmage"
             style="width: 630px; height: 420px;"
           />
-            <h2 class="centerMe" style="margin-top: 15px;"><b><i>9.Age of War 2</i></b></h2>
+            <h2 class="centerMe"><b><i>4.TotA<h5 style="margin-top: -10px;">Tower of the Archmage</i></b></h5></h2>
               <p style="margin-left: 30%; margin-right: 30%; margin-top: -5px;">
-              <b>One of the best attrition warfare games that Ive played, but the gameplay is static, hence the low placement.</b>
+              <b>You code spells and make broken combos to climb a roguelike tower, whats not to love?</b>
               </p>
         </div>  
         <div class="carousel-item">
           <img
-            src="../assets/AgeofWar.png"
+            src="../assets/HappyWheels.jpg"
             class=""
             alt="Happy Wheels"
             style="width: 630px; height: 420px;"
           />
-            <h2 class="centerMe" style="margin-top: 15px;"><b><i>9.Age of War 2</i></b></h2>
+            <h2 class="centerMe" style="margin-top: 15px;"><b><i>3.Happy Wheels</i></b></h2>
               <p style="margin-left: 30%; margin-right: 30%; margin-top: -5px;">
-              <b>One of the best attrition warfare games that Ive played, but the gameplay is static, hence the low placement.</b>
+              <b>Classic. Beats nearly every other game in terms of gameplay and has lots of user gen'ed content, but lacks focus.</b>
               </p>
         </div>  
         <div class="carousel-item">
           <img
-            src="../assets/AgeofWar.png"
+            src="../assets/Sonny.png"
             class=""
             alt="Sonny"
             style="width: 630px; height: 420px;"
           />
-            <h2 class="centerMe" style="margin-top: 15px;"><b><i>9.Age of War 2</i></b></h2>
+            <h2 class="centerMe" style="margin-top: 15px;"><b><i>2.Sonny Series</i></b></h2>
               <p style="margin-left: 30%; margin-right: 30%; margin-top: -5px;">
-              <b>One of the best attrition warfare games that Ive played, but the gameplay is static, hence the low placement.</b>
+              <b>Fully voice acted, Zombie Science Themed, Turn Based RPG. Very fun and the difficulties can be truly challenging.</b>
               </p>
         </div>  
         <div class="carousel-item">
           <img
-            src="../assets/AgeofWar.png"
+            src="../assets/PlazmaBurst2.jpg"
             class=""
             alt="Plazma Burst"
             style="width: 630px; height: 420px;"
           />
-            <h2 class="centerMe" style="margin-top: 15px;"><b><i>9.Age of War 2</i></b></h2>
-              <p style="margin-left: 30%; margin-right: 30%; margin-top: -5px;">
-              <b>One of the best attrition warfare games that Ive played, but the gameplay is static, hence the low placement.</b>
+            <h2 class="centerMe" style="margin-top: 0px;"><b><i>1.Plazma Burst 2</i></b></h2>
+              <p style="margin-left: 30%; margin-right: 30%; margin-top: -14px;">
+              <b>By far the best Flash Game I have played. Has plenty of fun mechanics and has massive replay value. Is now a standalone game.</b>
               </p>
         </div>  
-        <div class="carousel-item">
-          <img src="..." class="d-block w-100" alt="..." />
-        </div>
-        <div class="carousel-item">
-          <img src="..." class="d-block w-100" alt="..." />
-        </div>
       </div>
       <button
         class="carousel-control-prev"
