--- a/Pages/Zach.html
+++ b/Pages/Zach.html
@@ -18,11 +18,11 @@
   </head>
   <body>
     <!-- Navbar here -->
-    <div class="header">
+    <div class="header" style="margin-bottom: 7.5%;">
       <div class="container-fluid headerButton" style= "grid-column-start: 2;"><a href="../index.html"><h1><strong><b><i>HOME</i></b></strong></h1></a></div>
           <div class="container-fluid headerButton" style= "grid-column-start: 4;"><a href="../Pages/Aiden.html"><h1><strong><b><i>AIDEN</i></b></strong></h1></a></div>
           <div class="container-fluid headerButton" style= "grid-column-start: 6;"><a href="../Pages/Zach.html"><h1><strong><b><i>ZACH</i></b></strong></h1></a></div>
-      <div class="container-fluid headerButton playlistButton" style= "grid-column-start: 8;"><h1 style="font-size: 1.65em;"><strong><b><i>ZACH'S PLAYLIST BUTTON</i></b></strong></h1></div>
+      <div class="container-fluid headerButton playlistButton" style= "grid-column-start: 8;"><a href="https://www.youtube.com/playlist?list=PLzE7gX1myqCC7AAcys2daGfk95ynSD0mp" target="_blank"><h1 style="font-size: 1.65em;"><strong><b><i>ZACH'S PLAYLIST BUTTON</i></b></strong></h1></a></div>
   </div>
     <!-- Carousel Start -->
     <div id="carouselExample" class="carousel slide" style="margin-top: 25px;">
@@ -32,10 +32,9 @@
             src="../assets/TFDW.png"
             class=""
             alt="The Final Death Wish"
-            style="width: 630px; height: 420px;"
           />
-            <h2 class="centerMe"><b><i>10.TFDW<h5 style="margin-top: -10px;">The Final Death Wish</i></b></h5></h2>
-              <p style="margin-left: 30%; margin-right: 30%; margin-top: -5px;">
+            <h2 class="centerMe"><b><i>10.The Final Death Wish</i></b></h2>
+              <p>
               <b>The Final Death Wish is a level based Shoot-Em-Up that has a lot going for it, but gets beaten out in gameplay.</b>
               </p>
         </div>
@@ -44,10 +43,9 @@
             src="../assets/AgeofWar.png"
             class=""
             alt="Age of War"
-            style="width: 630px; height: 420px;"
           />
-            <h2 class="centerMe" style="margin-top: 15px;"><b><i>9.Age of War 2</i></b></h2>
-              <p style="margin-left: 30%; margin-right: 30%; margin-top: -5px;">
+            <h2 class="centerMe"><b><i>9.Age of War 2</i></b></h2>
+              <p>
               <b>One of the best attrition warfare games that Ive played, but the gameplay is static, hence the low placement.</b>
               </p>
         </div>  
@@ -56,10 +54,9 @@
             src="../assets/fancypantsadventure.png"
             class=""
             alt="Fancy Pants Adventure"
-            style="width: 630px; height: 420px;"
           />
-            <h2 class="centerMe"><b><i>8.FPA<h5 style="margin-top: -10px;">Fancy Pants Adventures</i></b></h5></h2>
-              <p style="margin-left: 30%; margin-right: 30%; margin-top: -5px;">
+            <h2 class="centerMe"><b><i>8.Fancy Pants Adventures</i></b></h2>
+              <p>
               <b>The best flash game platformer of all time, Super simplistic, however. A Mario-Like with great style.</b>
               </p>
         </div>  
@@ -68,10 +65,9 @@
             src="../assets/Learn2Fly.jpg"
             class=""
             alt="Learn to Fly 2"
-            style="width: 630px; height: 420px;"
           />
-            <h2 class="centerMe" style="margin-top: 15px;"><b><i>7.Learn2Fly</i></b></h2>
-              <p style="margin-left: 30%; margin-right: 30%; margin-top: -5px;">
+            <h2 class="centerMe"><b><i>7.Learn2Fly</i></b></h2>
+              <p>
               <b>Give a penguin a hang-glider and a billion dollars for R&D and you get this game. However, very repetitive.</b>
               </p>
         </div>  
@@ -80,10 +76,9 @@
             src="../assets/Raze2.png"
             class=""
             alt="Raze 2"
-            style="width: 630px; height: 420px;"
           />
-            <h2 class="centerMe" style="margin-top: 15px;"><b><i>6.Raze 2</i></b></h2>
-              <p style="margin-left: 30%; margin-right: 30%; margin-top: -5px;">
+            <h2 class="centerMe"><b><i>6.Raze 2</i></b></h2>
+              <p>
               <b>Take Quake, make it Halo, and then also a 2D Action Platformer. Sadly, levels are too similar.</b>
               </p>
         </div>  
@@ -92,10 +87,9 @@
             src="../assets/Swords and Souls.png"
             class=""
             alt="Swords and Souls"
-            style="width: 630px; height: 420px;"
           />
-            <h2 class="centerMe" style="margin-top: 15px;"><b><i>5.Swords and Souls</i></b></h2>
-              <p style="margin-left: 30%; margin-right: 30%; margin-top: -5px;">
+            <h2 class="centerMe"><b><i>5.Swords and Souls</i></b></h2>
+              <p>
               <b>Amazing style, great turn-based combat, but the game is mostly minigames.</b>
               </p>
         </div>  
@@ -104,10 +98,9 @@
             src="../assets/ToweroftheArchmage.png"
             class=""
             alt="Tower of the Archmage"
-            style="width: 630px; height: 420px;"
           />
-            <h2 class="centerMe"><b><i>4.TotA<h5 style="margin-top: -10px;">Tower of the Archmage</i></b></h5></h2>
-              <p style="margin-left: 30%; margin-right: 30%; margin-top: -5px;">
+            <h2 class="centerMe"><b><i>4.Tower of the Archmage</i></b></h2>
+              <p>
               <b>You code spells and make broken combos to climb a roguelike tower, whats not to love?</b>
               </p>
         </div>  
@@ -116,10 +109,9 @@
             src="../assets/HappyWheels.jpg"
             class=""
             alt="Happy Wheels"
-            style="width: 630px; height: 420px;"
           />
-            <h2 class="centerMe" style="margin-top: 15px;"><b><i>3.Happy Wheels</i></b></h2>
-              <p style="margin-left: 30%; margin-right: 30%; margin-top: -5px;">
+            <h2 class="centerMe"><b><i>3.Happy Wheels</i></b></h2>
+              <p>
               <b>Classic. Beats nearly every other game in terms of gameplay and has lots of user gen'ed content, but lacks focus.</b>
               </p>
         </div>  
@@ -128,10 +120,9 @@
             src="../assets/Sonny.png"
             class=""
             alt="Sonny"
-            style="width: 630px; height: 420px;"
           />
-            <h2 class="centerMe" style="margin-top: 15px;"><b><i>2.Sonny Series</i></b></h2>
-              <p style="margin-left: 30%; margin-right: 30%; margin-top: -5px;">
+            <h2 class="centerMe"><b><i>2.Sonny Series</i></b></h2>
+              <p>
               <b>Fully voice acted, Zombie Science Themed, Turn Based RPG. Very fun and the difficulties can be truly challenging.</b>
               </p>
         </div>  
@@ -140,14 +131,14 @@
             src="../assets/PlazmaBurst2.jpg"
             class=""
             alt="Plazma Burst"
-            style="width: 630px; height: 420px;"
           />
-            <h2 class="centerMe" style="margin-top: 0px;"><b><i>1.Plazma Burst 2</i></b></h2>
-              <p style="margin-left: 30%; margin-right: 30%; margin-top: -14px;">
-              <b>By far the best Flash Game I have played. Has plenty of fun mechanics and has massive replay value. Is now a standalone game.</b>
+            <h2 class="centerMe"><b><i>1.Plazma Burst 2</i></b></h2>
+              <p>
+              <b>By far the best Flash Game I have played. Has plenty of fun mechanics and has massive replay value. Go play it.</b>
               </p>
         </div>  
       </div>
+    <div class="buttonDiv">
       <button
         class="carousel-control-prev"
         type="button"
@@ -157,6 +148,7 @@
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Previous</span>
       </button>
+
       <button
         class="carousel-control-next"
         type="button"
@@ -167,6 +159,7 @@
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="visually-hidden">Next</span>
       </button>
+    </div class="buttonDiv">
     </div>
     <!-- Carousel End -->
 
