adding all carousel items

--- a/Pages/Aiden.html
+++ b/Pages/Aiden.html
@@ -21,7 +21,7 @@
       <div class="container-fluid headerButton" style= "grid-column-start: 2;"><h1><strong><b><i><a href="../index.html">HOME</a></i></b></strong></h1></div>
       <div class="container-fluid headerButton" style= "grid-column-start: 4;"><h1><strong><b><i>AIDEN</i></b></strong></h1></div>
       <div class="container-fluid headerButton" style= "grid-column-start: 6;"><h1><strong><b><i><a href="./Zach.html">ZACH</a></i></b></strong></h1></div>
-      <div class="container-fluid playlistButton" style= "grid-column-start: 8;"><h1 style="font-size: 1.85em;"><strong><b><i><a href="https://youtube.com/playlist?list=PLcJzOnUVyy1c0QOpG5yQbDmo-fqiW0V8q&si=yaX9QqalYLWchr93" target="_blank">AIDEN'S REVIEW PLAYLIST</a></i></b></strong></h1></div>
+      <div class="container-fluid playlistButton" style= "grid-column-start: 8;"><h1 style="font-size: 1.6em;"><strong><b><i><a href="https://youtube.com/playlist?list=PLcJzOnUVyy1c0QOpG5yQbDmo-fqiW0V8q&si=yaX9QqalYLWchr93" target="_blank">AIDEN'S REVIEW PLAYLIST</a></i></b></strong></h1></div>
     </div>
 
     <!-- Carousel Start -->
@@ -79,6 +79,82 @@
             dolores accusantium ea sit distinctio temporibus cum non neque
             voluptate quaerat eaque quidem unde aut voluptas, vero
             reprehenderit! Laudantium, reprehenderit ab?</b>
+        </div>
+        <div class="carousel-item">
+          <br>
+          <br>
+          <img src="../assets/Plants_vs_Zombies_logo.png"  alt="..." 
+          height="400"
+          width="630"/>
+          <h1 class="centerMe"><b><strong><i>6. Plants vs. Zombies</i></b></strong></h1>
+          <p style="margin-left: 20%; margin-right: 20%;">
+            <b>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste
+            dolores accusantium ea sit distinctio temporibus cum non neque
+            voluptate quaerat eaque quidem unde aut voluptas, vero
+            reprehenderit! Laudantium, reprehenderit ab?</b>
+        </div>
+        <div class="carousel-item">
+          <br>
+          <br>
+          <img src="../assets/SSF2_Title.jfif"  alt="..." 
+          height="440"
+          width="660"/>
+          <h1 class="centerMe"><b><strong><i>5. Super Smash Flash 2</i></b></strong></h1>
+          <p style="margin-left: 20%; margin-right: 20%;">
+            <b>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste
+            dolores accusantium ea sit distinctio temporibus cum non neque
+            voluptate quaerat eaque quidem unde aut voluptas, vero
+            reprehenderit! Laudantium, reprehenderit ab?</b>
+        </div>
+        <div class="carousel-item">
+          <br>
+          <br>
+          <img src="../assets/Skywire2.jpg"  alt="..." 
+          height="440"
+          width="630"/>
+          <h1 class="centerMe"><b><strong><i>4. Skywire 2</i></b></strong></h1>
+          <p style="margin-left: 20%; margin-right: 20%;">
+            <b>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste
+            dolores accusantium ea sit distinctio temporibus cum non neque
+            voluptate quaerat eaque quidem unde aut voluptas, vero
+            reprehenderit! Laudantium, reprehenderit ab?</b>
+        </div>
+        <div class="carousel-item">
+          <br>
+          <br>
+          <img src="../assets/Raft_Wars.jpg"  alt="..." 
+          height="440"
+          width="630"/>
+          <h1 class="centerMe"><b><strong><i>3. Raft Wars</i></b></strong></h1>
+          <p style="margin-left: 20%; margin-right: 20%;">
+            <b>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste
+            dolores accusantium ea sit distinctio temporibus cum non neque
+            voluptate quaerat eaque quidem unde aut voluptas, vero
+            reprehenderit! Laudantium, reprehenderit ab?</b>
+        </div>
+        <div class="carousel-item">
+          <br>
+          <br>
+          <img src="../assets/FB&WG.jfif"  alt="..." 
+          height="440"
+          width="630"/>
+          <h1 class="centerMe"><b><strong><i>2. FireBoy and WaterGirl</i></b></strong></h1>
+          <p style="margin-left: 20%; margin-right: 20%;">
+            <b>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste
+            dolores accusantium ea sit distinctio temporibus cum non neque
+            voluptate quaerat eaque quidem unde aut voluptas, vero
+            reprehenderit!</b>
+            <div class="carousel-item">
+              <img src="../assets/ClubPenguin.jpg"  alt="..." 
+              height="440"
+              width="630"/>
+              <h1 class="centerMe"><b><strong><i>1. Club Penguin</i></b></strong></h1>
+              <p style="margin-left: 20%; margin-right: 20%;">
+                <b>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste
+                dolores accusantium ea sit distinctio temporibus cum non neque
+                voluptate quaerat eaque quidem unde aut voluptas, vero
+                reprehenderit! Laudantium, reprehenderit ab?</b>
+            </div>
         </div>
       </div>
       <button
