filling the carousel + fixing text

--- a/Pages/Aiden.html
+++ b/Pages/Aiden.html
@@ -21,7 +21,7 @@
       <div class="container-fluid headerButton" style= "grid-column-start: 2;"><h1><strong><b><i><a href="../index.html">HOME</a></i></b></strong></h1></div>
       <div class="container-fluid headerButton" style= "grid-column-start: 4;"><h1><strong><b><i>AIDEN</i></b></strong></h1></div>
       <div class="container-fluid headerButton" style= "grid-column-start: 6;"><h1><strong><b><i><a href="./Zach.html">ZACH</a></i></b></strong></h1></div>
-      <div class="container-fluid playlistButton" style= "grid-column-start: 8;"><h1 style="font-size: 1.6em;"><strong><b><i><a href="https://youtube.com/playlist?list=PLcJzOnUVyy1c0QOpG5yQbDmo-fqiW0V8q&si=yaX9QqalYLWchr93" target="_blank">AIDEN'S REVIEW PLAYLIST</a></i></b></strong></h1></div>
+      <div class="container-fluid playlistButton" style= "grid-column-start: 8;"><h1 style="font-size: 1.8em;"><strong><b><i><a href="https://youtube.com/playlist?list=PLcJzOnUVyy1c0QOpG5yQbDmo-fqiW0V8q&si=yaX9QqalYLWchr93" target="_blank">AIDEN'S REVIEW PLAYLIST</a></i></b></strong></h1></div>
     </div>
 
     <!-- Carousel Start -->
@@ -36,11 +36,8 @@
             class="centerMe"
           />
           <h1 class="centerMe"><b><strong><i>10. Whack Your __</i></b></strong></h1>
-          <p style="margin-left: 20%; margin-right: 20%;">
-            <b>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste
-            dolores accusantium ea sit distinctio temporibus cum non neque
-            voluptate quaerat eaque quidem unde aut voluptas, vero
-            reprehenderit! Laudantium, reprehenderit ab?</b>
+          <p style="margin-left: 25%; margin-right: 20%;">
+            <b>A flash series where you as the player click on items in the room to whack whatever the title is. (Ex, boss, computer etc.) </b>
           </p>
         </div>
         <div class="carousel-item">
@@ -48,114 +45,82 @@
           width="630"
           height="440"/>
           <h1 class="centerMe"><b><strong><i>9. Line Rider</i></b></strong></h1>
-          <p style="margin-left: 20%; margin-right: 20%;">
-            <b>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste
-            dolores accusantium ea sit distinctio temporibus cum non neque
-            voluptate quaerat eaque quidem unde aut voluptas, vero
-            reprehenderit! Laudantium, reprehenderit ab?</b>
+          <p style="margin-left: 25%; margin-right: 20%;">
+            <b>A sandbox game where you create lines for the man on the sled to ride on. Most famously on the internet is people creating music syncs.</b>
           </p>
         </div>
         <div class="carousel-item">
-          <br>
+
           <img src="../assets/VVVVVV.png"  alt="..." 
           height="440"
           width="450"/>
           <h1 class="centerMe"><b><strong><i>8. VVVVVV</i></b></strong></h1>
-          <p style="margin-left: 20%; margin-right: 20%;">
-            <b>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste
-            dolores accusantium ea sit distinctio temporibus cum non neque
-            voluptate quaerat eaque quidem unde aut voluptas, vero
-            reprehenderit! Laudantium, reprehenderit ab?</b>
+          <p style="margin-left: 25%; margin-right: 20%;">
+            <b>A puzzle platform game where the goal is to return your spaceship crew back home. You can flip gravity at the push of a button</b>
         </div>
         <div class="carousel-item">
-          <br>
-          <br>
+         
           <img src="../assets/Bloxorz.webp"  alt="..." 
           height="440"
           width="630"/>
           <h1 class="centerMe"><b><strong><i>7. Blozorz</i></b></strong></h1>
-          <p style="margin-left: 20%; margin-right: 20%;">
-            <b>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste
-            dolores accusantium ea sit distinctio temporibus cum non neque
-            voluptate quaerat eaque quidem unde aut voluptas, vero
-            reprehenderit! Laudantium, reprehenderit ab?</b>
+          <p style="margin-left: 25%; margin-right: 20%;">
+            <b>A puzzle game all about getting the rectangle in the correct orientation to move across the map to fit in the square hole</b>
         </div>
         <div class="carousel-item">
-          <br>
-          <br>
+
           <img src="../assets/Plants_vs_Zombies_logo.png"  alt="..." 
           height="400"
           width="630"/>
           <h1 class="centerMe"><b><strong><i>6. Plants vs. Zombies</i></b></strong></h1>
-          <p style="margin-left: 20%; margin-right: 20%;">
-            <b>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste
-            dolores accusantium ea sit distinctio temporibus cum non neque
-            voluptate quaerat eaque quidem unde aut voluptas, vero
-            reprehenderit! Laudantium, reprehenderit ab?</b>
+          <p style="margin-left: 25%; margin-right: 20%;">
+            <b>A tower defense style game where you  collect suns to plant plats that will defend against waves of zombies</b>
         </div>
         <div class="carousel-item">
-          <br>
-          <br>
+
           <img src="../assets/SSF2_Title.jfif"  alt="..." 
           height="440"
           width="660"/>
           <h1 class="centerMe"><b><strong><i>5. Super Smash Flash 2</i></b></strong></h1>
-          <p style="margin-left: 20%; margin-right: 20%;">
-            <b>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste
-            dolores accusantium ea sit distinctio temporibus cum non neque
-            voluptate quaerat eaque quidem unde aut voluptas, vero
-            reprehenderit! Laudantium, reprehenderit ab?</b>
+          <p style="margin-left: 25%; margin-right: 20%;">
+            <b>Basically Nintendo’s Super Smash Bros Melee as a flash game but with more characters such as Goku and Naruto</b>
         </div>
         <div class="carousel-item">
-          <br>
-          <br>
+
           <img src="../assets/Skywire2.jpg"  alt="..." 
           height="440"
           width="630"/>
           <h1 class="centerMe"><b><strong><i>4. Skywire 2</i></b></strong></h1>
-          <p style="margin-left: 20%; margin-right: 20%;">
-            <b>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste
-            dolores accusantium ea sit distinctio temporibus cum non neque
-            voluptate quaerat eaque quidem unde aut voluptas, vero
-            reprehenderit! Laudantium, reprehenderit ab?</b>
+          <p style="margin-left: 25%; margin-right: 20%;">
+            <b>A game where you transport 3 people across a skywire and avoid obstacles to keep the people in the carriage.</b>
         </div>
         <div class="carousel-item">
-          <br>
-          <br>
+
           <img src="../assets/Raft_Wars.jpg"  alt="..." 
           height="440"
           width="630"/>
           <h1 class="centerMe"><b><strong><i>3. Raft Wars</i></b></strong></h1>
-          <p style="margin-left: 20%; margin-right: 20%;">
-            <b>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste
-            dolores accusantium ea sit distinctio temporibus cum non neque
-            voluptate quaerat eaque quidem unde aut voluptas, vero
-            reprehenderit! Laudantium, reprehenderit ab?</b>
+          <p style="margin-left: 25%; margin-right: 20%;">
+            <b>A turn based puzzle game where the goal was to knock the opposing pirates off their ships </b>
         </div>
         <div class="carousel-item">
-          <br>
-          <br>
+
           <img src="../assets/FB&WG.jfif"  alt="..." 
           height="440"
           width="630"/>
           <h1 class="centerMe"><b><strong><i>2. FireBoy and WaterGirl</i></b></strong></h1>
           <p style="margin-left: 20%; margin-right: 20%;">
-            <b>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste
-            dolores accusantium ea sit distinctio temporibus cum non neque
-            voluptate quaerat eaque quidem unde aut voluptas, vero
-            reprehenderit!</b>
+            <b>A puzzle platforming game where the gimick is that you control one character with “wasd” and the other character with the arrow keys.</b>
+          </div>
             <div class="carousel-item">
               <img src="../assets/ClubPenguin.jpg"  alt="..." 
               height="440"
               width="630"/>
               <h1 class="centerMe"><b><strong><i>1. Club Penguin</i></b></strong></h1>
-              <p style="margin-left: 20%; margin-right: 20%;">
-                <b>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste
-                dolores accusantium ea sit distinctio temporibus cum non neque
-                voluptate quaerat eaque quidem unde aut voluptas, vero
-                reprehenderit! Laudantium, reprehenderit ab?</b>
+              <p style="margin-left: 25%; margin-right: 20%;">
+                <b>MMO Game where you are able to live your life as a penguin, raising pets called puffles and owning your own igloo.</b>
             </div>
-        </div>
+      
       </div>
       <button
         class="carousel-control-prev"
